# aiMIDI

./: LICENSE  README.md  pyproject.toml
examples/: example_generate.sh  example_train.sh  sample_prompt.mid
src/ai_midi/: __init__.py  cli.py
src/ai_midi/config/: data.yaml  model.yaml
src/ai_midi/data/: __init__.py  dataset.py  midi_io.py  tokenizer.py
src/ai_midi/infer/: generator.py  server.py
src/ai_midi/model/: __init__.py
src/ai_midi/tests/: test_dataset.py  test_midi_io.py  test_smoke_training.py  test_tokenizer.py
src/ai_midi/train/: callbacks.py  trainer.py
src/ai_midi/utils/: io.py  logging.py  seed.py
src/midigegen/: __init__.py  cli.py
src/midigegen/config/: config.yaml  data.yaml  train.yaml
src/midigegen/data/: __init__.py  augment.py  tokenizer.py
src/midigegen/infer/: __init__.py  server.py
src/midigegen/model/: __init__.py  metrics.py  transformer.py
src/midigegen/tests/: test_dataset.py  test_midi_io.py  test_smoke_training.py  test_tokenizer.py
